test/spec_vectors/local_get/fail/module_3.wat
(module (func $type-local-num-vs-num (result f64) (local f64 i64) (f64.neg (local.get 1))))